feat: implement global exceptionhandler